fix css bug alignment

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -56,6 +56,7 @@ p {
 
 .inner-row-container-header{
   height: 50px;
+  flex: 1 1 100%;
   display:flex;
   justify-content: flex-start;
   align-items:center;
